# djangorestframework-dataclasses

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  codecov.yml  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml
rest_framework_dataclasses/: field_utils.py  fields.py  import_utils.py  serializers.py  settings.py  types.py  typing_utils.py  union_serializer.py  views.py
tests/: __init__.py  django_settings.py  fixtures.py  test_field_generation.py  test_field_utils.py  test_fields.py  test_functional.py  test_issues.py  test_py312.py  test_serializers.py  test_typing_utils.py
