[metadata]
name = djangorestframework-dataclasses
version = 0.7
description = A dataclasses serializer for Django REST Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
license = BSD

author = Oxan van Leeuwen
author_email = oxan@oxanvanleeuwen.nl
url = https://github.com/oxan/djangorestframework-dataclasses

classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = rest_framework_dataclasses
python_requires = >= 3.7
install_requires =
    django >= 2.0
    djangorestframework >= 3.9
    typing_extensions >= 3.7.4; python_version < '3.8'

[options.package_data]
rest_framework_dataclasses =
    py.typed
